# ProjetIF2B

./: .gitignore  Bazar  CMakeLists.txt  README.md  Test.c  capture.c  capture.h  game.c  game.h  main.c  main.h  menu.c  pose.c  pose.h  saves.c  saves.h  setup.c  setup.h
ProjetIF2B_Rendu/: CMakeLists.txt  capture.h  game.c  game.h  main.c  pose.c  saves.c  setup.c
ProjetIF2B_Test/: CMakeLists.txt  Moves.c  Moves.h  game.c  game.h  main.c  main.h  saves.c  saves.h  setup.c  setup.h
